--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@ngrx/store": "^9.2.0",
     "@ngrx/store-devtools": "^9.2.0",
     "bootstrap": "4.5.0",
-    "ngx-bootstrap": "^5.6.1",
+    "ngx-bootstrap": "6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uuid": "^8.2.0",
