--- a/angular.json
+++ b/angular.json
@@ -19,6 +19,7 @@
           "options": {
             "allowedCommonJsDependencies": [
               "lodash",
+              "md5",
               "firebase/app",
               "@firebase/app",
               "@firebase/component",
@@ -33,10 +34,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/bootstrap/scss/bootstrap.scss",
               "src/assets/theme/custom-theme.scss",
@@ -99,10 +97,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/bootstrap/scss/bootstrap.scss",
               "src/assets/theme/custom-theme.scss",
@@ -119,9 +114,7 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         },
         "e2e": {
