--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngrx/effects": "^10.0.0",
     "@ngrx/entity": "^10.0.0",
     "@ngrx/router-store": "^10.0.0",
+    "@ngrx/schematics": "^10.0.0",
     "@ngrx/store": "^10.0.0",
     "@ngrx/store-devtools": "^10.0.0",
     "bootstrap": "4.5.2",
